compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__inf_float_case_statement.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main(x) {\n  case x {\n  100.001e123_456_789 -> \"bar\"\n    _ -> \"foo\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
  100.001e123_456_789 -> "bar"
    _ -> "foo"
  }
}


----- ERROR
error: Float outside of valid range
  ┌─ /src/one/two.gleam:4:3
  │
4 │   100.001e123_456_789 -> "bar"
  │   ^^^^^^^^^^^^^^^^^^^

This float value is too large to be represented by a floating point type:
float values must be in the range -1.7976931348623157e308 -
1.7976931348623157e308.
