compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_operators.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n    1 + 1 // => 2\n    5 - 1 // => 4\n    5 / 2 // => 2\n    3 * 3 // => 9\n    5 % 2 // => 1\n    2 > 1  // => True\n    2 < 1  // => False\n    2 >= 1 // => True\n    2 <= 1 // => False\n}\n"
---
----- SOURCE CODE

fn go() {
    1 + 1 // => 2
    5 - 1 // => 4
    5 / 2 // => 2
    3 * 3 // => 9
    5 % 2 // => 1
    2 > 1  // => True
    2 < 1  // => False
    2 >= 1 // => True
    2 <= 1 // => False
}


----- COMPILED JAVASCRIPT
import { remainderInt, divideInt } from "../gleam.mjs";

function go() {
  1 + 1;
  5 - 1;
  divideInt(5, 2);
  3 * 3;
  remainderInt(5, 2);
  2 > 1;
  2 < 1;
  2 >= 1;
  return 2 <= 1;
}
