compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_patterns.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 146
expression: "\nfn go(x) {\n  let assert 4 = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (x !== 4) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
