compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__preceeding_zeros_float_pattern.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 266
expression: "\nfn main(x) {\n  let assert 09_179.1 = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function main(x) {
  if (x !== 9_179.1) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      3,
      "main",
      "Assignment pattern did not match",
      { value: x }
    )
  }
  return x;
}

