compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__remainder.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n  5 % 0 // => 0\n}\n"
---
----- SOURCE CODE

fn go() {
  5 % 0 // => 0
}


----- COMPILED JAVASCRIPT
import { remainderInt } from "../gleam.mjs";

function go() {
  return remainderInt(5, 0);
}
